<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/mail_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="k"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mail_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/contact_fragment_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/adress_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/title"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_adress_header"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/adress_header"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_adress"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/phone_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/adress"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_phone_header"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/phone_header"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_phone"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fax_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/phone"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_fax_header"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fax_header"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_fax"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mail_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fax"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_contact_info_header"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/mail_header"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|left"
            android:text="@string/contact_fragment_contact_info"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>